--- a/oneweek/oneday/css/one.css
+++ b/oneweek/oneday/css/one.css
@@ -25,6 +25,8 @@ html, body {
 
 .main {
     margin: 60px auto 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -45,7 +47,10 @@ html, body {
     .main {
         width: 350px;
         height: 1000px;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         margin-bottom: 60px;
     }
     .form, .notice {
@@ -57,7 +62,10 @@ html, body {
     .main {
         width: 800px;
         height: 500px;
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
     }
     .form, .notice {
         width: 360px;
@@ -86,6 +94,7 @@ input {
     outline: none;
     border: 0;
     background: rgba(255, 255, 255, .98);
+    -webkit-transition: all .8s;
     transition: all .8s;
     margin-bottom: 5px;
 }
@@ -115,8 +124,13 @@ p {
 }
 
 .strong {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     width: 100%;
     height: 10px;
     margin-bottom: 5px;
