--- a/oneweek/oneday/css/four.css
+++ b/oneweek/oneday/css/four.css
@@ -17,17 +17,28 @@ html, body {
 }
 
 .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     width: 88%;
     height: 80%;
     margin: 5% auto 0;
 }
 
 .menu-no, .menu-yes {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     overflow-y: auto;
     width: 40%;
 }
