--- a/oneweek/oneday/css/five.css
+++ b/oneweek/oneday/css/five.css
@@ -28,8 +28,13 @@ table {
 }
 
 .shop-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     height: 100px;
     line-height: 100px;
 }
