--- a/twoweek/css/index.css
+++ b/twoweek/css/index.css
@@ -28,4 +28,76 @@ h2 {
     text-align: center;
     height: 60px;
     line-height: 60px;
+    color: rgb(90, 81, 84);
+}
+
+#shade {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(41, 40, 40, 0.76);
+    z-index: 6666;
+}
+
+.shop {
+    position: fixed;
+    z-index: 9999;
+    background: whitesmoke;
+    height: 80%;
+    top: 10%;
+    box-shadow: 0 0 5px white;
+}
+
+.shop-title {
+    width: calc(100% - 20px);
+    height: 29px;
+    line-height: 29px;
+    padding-left: 20px;
+    background: white;
+    border-bottom: 1px solid #ebebeb;
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-right {
+    margin-left: auto;
+}
+
+.shop-name {
+    height: 29px;
+    line-height: 29px;
+    color: midnightblue;
+    font-size: 13px;
+}
+
+.shop-close {
+    height: 29px;
+    line-height: 29px;
+    text-align: center;
+    width: 40px;
+    background: rgba(248, 72, 2, 0.6);
+    color: antiquewhite;
+    transition: all .3s;
+    cursor: pointer;
+}
+
+.shop-close:hover {
+    background: rgba(248, 72, 2, 0.9);
+    color: white;
+}
+
+@media screen and (max-width: 420px) {
+    .shop {
+        width: 80%;
+        left: 10%;
+    }
+}
+
+@media screen and (min-width: 420px) {
+    .shop {
+        width: 360px;
+        left: calc(50% - 180px);
+    }
 }
