--- a/twoweek/css/index.css
+++ b/twoweek/css/index.css
@@ -101,3 +101,66 @@ h2 {
         left: calc(50% - 180px);
     }
 }
+
+.shop-cont {
+    width: calc(100% - 20px);
+    height: calc(100% - 50px);
+    padding: 10px;
+    overflow-y: auto;
+}
+
+.shop-item {
+    width: 100%;
+    height: 80px;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.shop-item > div {
+    height: 80px;
+    line-height: 80px;
+    width: 60%;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.shop-item > div:nth-child(2) {
+    background: paleturquoise;
+    color: #ff6600;
+}
+
+.shop-item > div:last-child {
+    margin-left: auto;
+    width: 20%;
+    transition: all .3s;
+}
+
+
+.shop-item > div:first-child {
+    width: 20%;
+    background: yellowgreen;
+    color: white;
+}
+
+.able {
+    background: rgba(248, 72, 2, 0.6);
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+.able:hover {
+    color: white;
+    background: rgba(248, 72, 2, 0.9);
+}
+
+.disable {
+    background: #ebebeb;
+    color: black;
+    cursor: default;
+}
+
+.disable:hover {
+    background: #ebebeb;
+    color: black;
+}
