--- a/twoweek/css/index.css
+++ b/twoweek/css/index.css
@@ -2,7 +2,63 @@
 h2 {
     text-align: center;
     margin: 0;
-    padding-top: 20px;
+    height: 40px;
+    line-height: 40px;
+    color: rgb(114, 113, 113);
+    text-shadow: 2px 3px 5px rgb(174, 165, 197);
+}
+
+p {
+    text-align: center;
+}
+
+#money, h2 {
+    background: rgba(255, 208, 0, 0.8);
+}
+
+#money {
+    color: #ff6600;
+    height: 30px;
+    line-height: 30px;
+}
+
+#menu {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+}
+
+.flex1 {
+    flex: 1;
+}
+
+.flex2 {
+    flex: 2;
+}
+
+#rank {
+    background: url(../images/icon/rank.png) no-repeat;
+    background-size: auto 100%;
+    cursor: pointer;
+}
+
+#random {
+    background: url(../images/icon/random.png) no-repeat;
+    background-size: auto 100%;
+    cursor: pointer;
+}
+
+#shop {
+    background: url(../images/icon/shop.png) no-repeat;
+    background-size: auto 100%;
+    cursor: pointer;
+}
+
+#del {
+    background: url(../images/icon/del.png) no-repeat;
+    background-size: auto 100%;
 }
 
 .main {
@@ -25,6 +81,8 @@ h2 {
 
 .main > .row > .flex1 > .item {
     height: auto;
+    background: url(../images/item.png) no-repeat;
+    background-size: 100% 100%;
 }
 
 img {
@@ -45,8 +103,8 @@ img {
     position: fixed;
     z-index: 9999;
     background: whitesmoke;
-    height: 80%;
-    top: 10%;
+    height: 70%;
+    top: 20%;
     box-shadow: 0 0 5px white;
 }
 
@@ -111,18 +169,18 @@ img {
 
 .shop-item {
     width: 100%;
-    height: 80px;
     padding: 10px 0;
     display: flex;
     flex-direction: row;
 }
 
 .shop-item > div {
-    height: 80px;
-    line-height: 80px;
     width: 60%;
     border-radius: 10px;
     text-align: center;
+    display: flex;
+    align-items:center;
+    justify-content:center;
 }
 
 .shop-item > div:nth-child(2) {
