--- a/twoweek/css/index.css
+++ b/twoweek/css/index.css
@@ -151,6 +151,7 @@ img {
         width: 80%;
         left: 10%;
     }
+
 }
 
 @media screen and (min-width: 420px) {
@@ -221,4 +222,47 @@ img {
 .disable:hover {
     background: #ebebeb;
     color: black;
+}
+
+.choujiang {
+    position: fixed;
+    z-index: 9998;
+    height: 300px;
+    width: 300px;
+    top: calc(50% - 150px);
+    left: calc(50% - 150px);
+}
+
+.cj-map {
+    width: 100%;
+    height: 100%;
+    background: url(../images/choujiang/map.png) no-repeat;
+    background-size: 100% 100%;
+}
+
+.cj-go {
+    position: fixed;
+    z-index: 9999;
+    width: 200px;
+    height: 200px;
+    top: calc(50% - 100px);
+    left: calc(50% - 100px);
+    background: url(../images/choujiang/go.png) no-repeat;
+    background-size: 100% 100%;
+    cursor: pointer;
+}
+
+.cj-close {
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    position: fixed;
+    top: calc(50% - 150px);
+    right: calc(50% - 150px);
+    border: 1px solid white;
+    border-radius: 30px;
+    z-index: 9999;
+    text-align: center;
+    line-height: 30px;
+    color: white;
 }
