--- a/twoweek/css/login.css
+++ b/twoweek/css/login.css
@@ -15,14 +15,21 @@
 }
 
 .tab {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     width: 100%;
     height: 20px;
 }
 
 .tab-item {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     height: 20px;
     line-height: 20px;
     text-align: center;
@@ -30,6 +37,7 @@
     color: white;;
     font-size: 13px;
     cursor: pointer;
+    -webkit-transition: all .6s;
     transition: all .6s;
 }
 
@@ -66,6 +74,7 @@ input[type='text'], input[type='password'] {
     outline: none;
     border: 0;
     background: rgba(255, 255, 255, .6);
+    -webkit-transition: all .3s;
     transition: all .3s;
     margin-top: 10px;
 }
@@ -86,6 +95,7 @@ input[type='submit'] {
     outline: none;
     border: 0;
     background: rgba(231, 113, 2, .6);
+    -webkit-transition: all .3s;
     transition: all .3s;
     margin-top: 10px;
     color: wheat;
